# IDA-MCP-Server

​​IDA-MCP-Server​/: README.md  calculate_complexity.py  main.py  pyproject.toml  test_example.py  test_mcp_service.py
​​IDA-MCP-Server​/docs/: PRD.md  tasks.md
​​IDA-MCP-Server​/src/: __init__.py
​​IDA-MCP-Server​/src/tools/: __init__.py  code_analyzer.py
​​IDP-KM-MCP-Server​/: DEPLOYMENT.md  README.md  README_example.md  ai_report.txt  config.py  debug_mcp.py  document_mcp.py  documents.db  example_usage.py  main.py  mcp_tech_doc.txt  pyproject.toml  requirements.txt  start_server.py  test_mcp.py
​​IDP-KM-MCP-Server​/docs/: tasks.md  如何在微服务架构中实现安全性.docx  金发科技stock_analysis_sse_600143_20250811T024734.md
